add fonts and alert-overlay

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -212,19 +212,19 @@ dd
 /* A font by Jos Buivenga (exljbris) -> www.exljbris.nl
 @font-face
   font-family: Delicious
-  src: url("/assets/fonts/Delicious-Roman.otf")
+  src: url("/fonts/Delicious-Roman.otf")
 
 
 @font-face
   font-family: Delicious
   font-weight: bold
-  src: url("/assets/fonts/Delicious-Bold.otf")
+  src: url("/fonts/Delicious-Bold.otf")
 
 
 @font-face
   font-family: Delicious
   font-style: italic
-  src: url("/assets/fonts/Delicious-Italic.otf")
+  src: url("/fonts/Delicious-Italic.otf")
 
 
 @font-face
