--- a/app/stylesheets/partials/clean/_mixins.sass
+++ b/app/stylesheets/partials/clean/_mixins.sass
@@ -30,7 +30,7 @@
   font-family: $header-font
 
 =awesome-button-color($c)
-  background: $c url(/assets/images/alert-overlay.png) repeat-x
+  background: $c url(/images/alert-overlay.png) repeat-x
   &:hover
     background-color: $c - #111111
 
