basic interaction with fake outfits

--- a/app/stylesheets/partials/clean/_mixins.sass
+++ b/app/stylesheets/partials/clean/_mixins.sass
@@ -55,6 +55,26 @@
   &:active
     top: 1px
 
+=reset-awesome-button
+  +border-radius(0)
+  background: transparent
+  display: inline
+  padding: 0
+  color: inherit
+  -moz-box-shadow: none
+  -webkit-box-shadow: none
+  text-shadow: none
+  border-bottom: 0
+  position: static
+  font-weight: normal
+  line-height: inherit
+  
+  &:hover
+    background: transparent
+    color: inherit
+  &:active
+    top: auto
+
 =loud-awesome-button-color
   +awesome-button-color(#ff5c00)
 
