--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -8,6 +8,7 @@
 @import items
 @import items/index
 @import items/show
+@import outfits/edit
 @import outfits/new
 @import pets/bulk
 @import static/terms
