--- a/app/stylesheets/partials/clean/_constants.sass
+++ b/app/stylesheets/partials/clean/_constants.sass
@@ -1,3 +1,4 @@
+$background-color:      #fff
 $text-color:            #040
 $soft-text-color:       $text-color + #444
 $link-color:            $text-color + #222
