--- a/app/stylesheets/partials/clean/_mixins.sass
+++ b/app/stylesheets/partials/clean/_mixins.sass
@@ -91,3 +91,18 @@
   background: $module-bg-color
   border: 1px solid $module-border-color
   padding: 1em
+  
+=notice
+  background: $notice-bg-color
+  border: 1px solid $notice-border-color
+  color: $notice-color
+  
+=error
+  background: $error-bg-color
+  border: 1px solid $error-border-color
+  color: $error-color
+
+=warning
+  background: $warning-bg-color
+  border: 1px solid $warning-border-color
+  color: $warning-color
