--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -118,19 +118,13 @@ ul.buttons
   text-align: center
 
 .success
-  background: $notice-bg-color
-  border: 1px solid $notice-border-color
-  color: $notice-color
+  +notice
 
 .alert
-  background: $error-bg-color
-  border: 1px solid $error-border-color
-  color: $error-color
+  +error
 
 .warning
-  background: $warning-bg-color
-  border: 1px solid $warning-border-color
-  color: $warning-color
+  +warning
 
 #userbar
   +header-text
