--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -64,6 +64,8 @@ $outfit-content-inner-width: $outfit-content-width - $outfit-header-padding
     /* makes it not take up inline space
     position: relative
     width: 16px
+    &.loading
+      background-image: url(/images/loading.gif) !important
   h4
     cursor: pointer
     font-size: 115%
@@ -312,7 +314,7 @@ body.outfits-edit
   $object-img-diff: ($object-width - $object-img-size) / 2 + $object-padding
 
   .nc-icon
-    background: url(/assets/images/nc.png) no-repeat
+    background: url(/images/nc.png) no-repeat
     height: $nc-icon-size
     position: absolute
     right: $object-img-diff
@@ -348,12 +350,16 @@ body.outfits-edit
     h3
       margin-bottom: .5em
     > ul
+      background: url(/images/loading.gif) no-repeat center top
       display: block
       font-family: $main-font
       list-style: none
       margin-bottom: 1em
+      min-height: 16px
       > li
         +outfit
+      &.loaded
+        background: transparent
 
   .preview-sidebar-nav
     float: right
@@ -403,3 +409,14 @@ body.outfits-edit
     top: 0
     width: 100%
     z-index: 5
+  
+  #preview-sidebar-nav-outfits, #save-outfit-signed-in
+    display: none
+  
+  &.user-signed-in
+    #preview-sidebar-nav-outfits
+      display: block
+    #save-outfit span
+      display: none
+    span#save-outfit-signed-in
+      display: inline
